Attempt 1 at solving CORS errors Added SSL cert from CA

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -7,8 +7,8 @@
       "Https": {
         "Url": "https://0.0.0.0:443",
         "Certificate": {
-          "Path": "C:\\Users\\parso\\source\\repos\\Dev-Certs\\aspnetapp.pfx",
-          "Password": "92qDwFv63#Kz"
+          "Path": "/etc/letsencrypt/live/bepio.net/fullchain.pem",
+          "KeyPath": "/etc/letsencrypt/live/bepio.net/privkey.pem"
         }
       }
     }
@@ -18,5 +18,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
