--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,19 @@
 {
+
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://+:80"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:443",
+        "Certificate": {
+          "Path": "/etc/letsencrypt/live/bepio.net/fullchain.pem",
+          "KeyPath": "/etc/letsencrypt/live/bepio.net/privkey.pem"
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
