--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,31 +1,20 @@
-name: CI/CD Pipeline
+name: Deploy to Server
 
 on:
   push:
     branches:
-      - main  # Trigger on push to the main branch
+      - main  # Trigger the workflow when changes are pushed to the 'main' branch
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '8.0.x'
-
-    - name: Build project
-      run: dotnet build --configuration Release
-
-    - name: Publish project
-      run: dotnet publish --configuration Release --output ./out
+      uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -33,26 +22,24 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and Push Docker image
-      uses: docker/build-push-action@v2
+    - name: Build and push Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:latest .
+        docker push ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:latest
+
+    - name: Add SSH key
+      uses: webfactory/ssh-agent@v0.5.3
       with:
-        context: .
-        push: true
-        tags: parsonsbpp/zd-article-grabber:latest
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
     - name: Deploy to Server
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-          docker pull parsonsbpp/zd-article-grabber:latest
-          docker stop $(docker ps -q --filter ancestor=parsonsbpp/zd-article-grabber:latest)
-          docker rm $(docker ps -q --filter ancestor=parsonsbpp/zd-article-grabber:latest)
+          docker pull ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:latest
+          docker stop $(docker ps -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:latest)
+          docker rm $(docker ps -q --filter ancestor=${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:latest)
           docker run -d -p 80:80 -p 443:443 \
-          -v /etc/letsencrypt/live/bepio.net/fullchain.pem:/etc/letsencrypt/live/bepio.net/fullchain.pem:ro \
-          -v /etc/letsencrypt/live/bepio.net/privkey.pem:/etc/letsencrypt/live/bepio.net/privkey.pem:ro \
-          parsonsbpp/zd-article-grabber:latest
+            -v /etc/letsencrypt/live/bepio.net/fullchain.pem:/etc/letsencrypt/live/bepio.net/fullchain.pem:ro \
+            -v /etc/letsencrypt/live/bepio.net/privkey.pem:/etc/letsencrypt/live/bepio.net/privkey.pem:ro \
+            ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:latest
         EOF
