--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -30,10 +30,22 @@ jobs:
         echo "MAJOR_VERSION=$major_version" >> $GITHUB_ENV
         echo "MINOR_VERSION=$minor_version" >> $GITHUB_ENV
 
+    - name: Set Timestamp
+      id: set_timestamp
+      run: |
+        TIMESTAMP=$(date +'%Y%m%d%H%M%S')
+        echo "TIMESTAMP=${TIMESTAMP}" >> $GITHUB_ENV
+
+    - name: Define Image Tag
+      id: define_tag
+      run: |
+        IMAGE_TAG="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ env.TIMESTAMP }}"
+        echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
+
     - name: Build and push Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.latest .
-        docker push ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.latest
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.IMAGE_TAG }} .
+        docker push ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.IMAGE_TAG }}
 
     - name: Add SSH key
       uses: webfactory/ssh-agent@v0.5.3
@@ -42,28 +54,39 @@ jobs:
 
     - name: Deploy to server
       run: |
-          ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-          version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.$(date +'%Y%m%d%H%M%S')"
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << EOF
+          set -e  # Exit on any error
+          IMAGE_TAG="${{ env.IMAGE_TAG }}"
+          TIMESTAMP="${{ env.TIMESTAMP }}"
+          version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.$TIMESTAMP"
           container_name="zdag-$version"
 
           # Stop and remove the current container
           current_container=$(docker ps -q --filter "name=zdag")
           if [ ! -z "$current_container" ]; then
             docker stop $current_container
-            docker rm $current_container
           fi
 
-          # Run the new container
-          docker run -d -p 80:80 -p 443:443 \
+          # Run the new container and capture output
+          if ! output=$(docker run -d -p 80:80 -p 443:443 \
           --name $container_name \
           -v /etc/letsencrypt/live/bepio.net/fullchain.pem:/etc/letsencrypt/live/bepio.net/fullchain.pem:ro \
           -v /etc/letsencrypt/live/bepio.net/privkey.pem:/etc/letsencrypt/live/bepio.net/privkey.pem:ro \
-          ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.latest
+          ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.IMAGE_TAG }} 2>&1); then
+            echo "Docker run command failed with the following error:"
+            echo "$output"
+            exit 1
+          fi
 
           # Clean up old containers
           old_containers=$(docker ps -a -q --filter "name=zdag" | tail -n +4)
           if [ ! -z "$old_containers" ]; then
             docker rm -f $old_containers
           fi
-          EOF
 
+          # Clean up old images
+          old_images=$(docker images ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber --format "{{.ID}} {{.CreatedAt}}" | sort -r | tail -n +4 | awk '{print $1}')
+          if [ ! -z "$old_images" ]; then
+            docker rmi -f $old_images
+          fi
+          EOF
