--- a/.github/workflows/deploy-Dev.yml
+++ b/.github/workflows/deploy-Dev.yml
@@ -3,7 +3,7 @@ name: Deploy Feature Branch to Server
 on:
   push:
     branches:
-      - 'Feature-*'
+      - 'Dev-*'
 
 jobs:
   deploy:
@@ -27,20 +27,16 @@ jobs:
       run: |
         major_version=$(grep 'public const string Major' ./VersionInfo.cs | grep -o '[0-9]\+')
         minor_version=$(grep 'public const string Minor' ./VersionInfo.cs | grep -o '[0-9]\+')
+        build_version=$(grep 'public const string Build' ./VersionInfo.cs | grep -o '[0-9]\+')
         echo "MAJOR_VERSION=$major_version" >> $GITHUB_ENV
         echo "MINOR_VERSION=$minor_version" >> $GITHUB_ENV
+        echo "BUILD_VERSION=$build_version" >> $GITHUB_ENV
 
-    - name: Set Timestamp
-      id: set_timestamp
-      run: |
-        TIMESTAMP=$(date +'%Y%m%d%H%M%S')
-        echo "TIMESTAMP=${TIMESTAMP}" >> $GITHUB_ENV
-
-    - name: Define Image Tag with Branch Name
+    - name: Define Image Tag
       id: define_tag
       run: |
         BRANCH_NAME=$(echo ${{ github.ref }} | sed 's/refs\/heads\///')
-        IMAGE_TAG="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ env.TIMESTAMP }}-$BRANCH_NAME"
+        IMAGE_TAG="DEV.${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ env.BUILD_VERSION }}"
         echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
 
     - name: Build and push Docker image
@@ -58,18 +54,17 @@ jobs:
           ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << EOF
           set -e  # Exit on any error
           IMAGE_TAG="${{ env.IMAGE_TAG }}"
-          TIMESTAMP="${{ env.TIMESTAMP }}"
-          version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.$TIMESTAMP"
+          version="DEV.${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.$TIMESTAMP"
           container_name="zdag-$version"
 
-          # Remove containers associated with any other Feature branch
-          old_feature_containers=$(docker ps -a -q --filter "name=zdag-Feature")
+          # Remove containers associated with any other Dev branch
+          old_feature_containers=$(docker ps -a -q --filter "name=zdag-Dev")
           if [ ! -z "$old_feature_containers" ]; then
             docker rm -f $old_feature_containers
           fi
 
-          # Remove images associated with any other Feature branch
-          old_feature_images=$(docker images ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber --format "{{.ID}} {{.Tag}}" | grep "Feature" | awk '{print $1}')
+          # Remove images associated with any other Dev branch
+          old_feature_images=$(docker images ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber --format "{{.ID}} {{.Tag}}" | grep "Dev" | awk '{print $1}')
           if [ ! -z "$old_feature_images" ]; then
             docker rmi -f $old_feature_images
           fi
