--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,17 @@
 {
+  "Paths": {
+    "HtmlFilesPath": "/api/static-files/html",
+    "ResourceFilesPath": "/api/static-files/",
+    "UrlPath": "https://parsonious.github.io/How-To/pages/",
+    "DefaultFiles": {
+      "css": "default.css",
+      "js": "default.js",
+      "img": "default.png",
+      "sql": "default.sql",
+      "ps1": "default.ps1"
+    },
+    "SupportedFileTypes": [ "css", "js", "img", "sql", "ps1" ]
+  },
   "Kestrel": {
     "Endpoints": {
       "Http": {
