- Refactoring Node to remove Path Construction - Adding Path Construction logic to expand PathHelper - Correct error on Path Construction to formualte the correct local/Remote path for Sql files - Add rendering for SQL and PS1 files to directly display them in the html page -Refactor Page-Node relationship -Add DI and better DDD principles -Better adhere to SRP -Solve Default file path not returning -Solve correct url returning during fetch -Solve node cache failure -Add typing Enum for resources -Remove unused code that could be identified
So much more it feels like

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,9 @@
     "UrlPath": "https://parsonious.github.io/How-To/pages/"
   },
   "Files": {
-    "SupportedFileTypes": [ "css", "js", "img", "sql", "ps1" ],
+    "SupportedFileTypes": [ "html", "css", "js", "img", "sql", "ps1" ],
     "DefaultFiles": {
+      "html": "default.html",
       "css": "default.css",
       "js": "default.js",
       "img": "default.png",
