--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,15 +1,12 @@
 {
   "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://+:80"
-      },
-      "Https": {
-        "Url": "https://0.0.0.0:443",
-        "Certificate": {
-          "Path": "/etc/letsencrypt/live/bepio.net/fullchain.pem",
-          "KeyPath": "/etc/letsencrypt/live/bepio.net/privkey.pem"
-        }
+  "Endpoints": {
+    "Https": {
+      "Url": "https://localhost:5001",
+      "Certificate": {
+        "Path": "%USERPROFILE%\\.aspnet\\https\\localhost.pfx",
+        "Password": ""
+      }
       }
     }
   },
