--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,8 @@
       "js": "default.js",
       "img": "default.png",
       "sql": "default.sql",
-      "ps1": "default.ps1"
+      "ps1": "default.ps1",
+      "tsql": "default.tsql"
     }
   },  
   "XPathQueries": {
