- SanitizeInput is hit several times, optimized it to an O(n) - Revert appsettings.json to previous pathing cause it broke everything..something needs to be changed there. - Added null check to ResourceFetcher cache check - Removed Console.Writeline logging that logged nothing. - Update caching to cache a ResourceResult instead of a string #11 - Update caching to extend for 10 minutes when a page is accessed - Add CachedPage type to allow for the above - Minor optimizations

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Paths": {
-    "HtmlFilesPath": "/api/source/html",
-    "ResourceFilesPath": "/api/source/",
+    "HtmlFilesPath": "/api/static-files/html",
+    "ResourceFilesPath": "/api/static-files/",
     "UrlPath": "https://parsonious.github.io/How-To/pages/"
   },
   "Files": {
