--- a/.github/workflows/deploy-Prod.yml
+++ b/.github/workflows/deploy-Prod.yml
@@ -66,7 +66,7 @@ jobs:
           # Run the new container and capture output
           if ! output=$(docker run -d -p 8080:80 -p 8443:443 \
           --name $container_name \
-          -v /home/parsonious/bepio/api/source:/api/static-files \
+          -v /home/parsonious/bepio/api/source:/api/source \
           -v /etc/letsencrypt/live/bepio.net/fullchain.pem:/etc/letsencrypt/live/bepio.net/fullchain.pem:ro \
           -v /etc/letsencrypt/live/bepio.net/privkey.pem:/etc/letsencrypt/live/bepio.net/privkey.pem:ro \
           ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.IMAGE_TAG }} 2>&1); then
@@ -74,7 +74,15 @@ jobs:
             echo "$output"
             exit 1
           fi
+          echo "Containers before removal:"
+          docker ps -a --filter "name=PROD"
 
+          old_containers=$(docker ps -a -q --filter "name=PROD" | tail -n +4)
+          echo "Old containers that will be removed: $old_containers"
+
+          if [ ! -z "$old_containers" ]; then
+          docker rm -f $old_containers
+          fi
           # Clean up old containers
           old_containers=$(docker ps -a -q --filter "name=PROD" | tail -n +4)
           if [ ! -z "$old_containers" ]; then
