--- a/.github/workflows/deploy-Prod.yml
+++ b/.github/workflows/deploy-Prod.yml
@@ -77,7 +77,12 @@ jobs:
           echo "Containers before removal:"
           docker ps -a --filter "name=PROD"
 
-          old_containers=$(docker ps -a -q --filter "name=PROD" | tail -n +1)
+          old_containers=$(docker ps -a --filter "name=PROD" \
+            --format "{{.ID}} {{.CreatedAt}}" \
+            | sort -k2,2r \
+            | tail -n +4 \
+            | awk '{print $1}')
+            
           echo "Old containers that will be removed: $old_containers"
 
           if [ ! -z "$old_containers" ]; then
@@ -90,7 +95,7 @@ jobs:
           fi
 
           # Clean up old images
-          old_images=$(docker images ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber --format "{{.ID}} {{.CreatedAt}}" | sort -r | tail -n +4 | awk '{print $1}')
+          old_images=$(docker images ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber --format "{{.ID}} {{.CreatedAt}}" | sort -r | tail -n +1 | awk '{print $1}')
           if [ ! -z "$old_images" ]; then
             docker rmi -f $old_images
           fi
