--- a/.github/workflows/deploy-Prod.yml
+++ b/.github/workflows/deploy-Prod.yml
@@ -76,27 +76,35 @@ jobs:
           fi
           echo "Containers before removal:"
           docker ps -a --filter "name=PROD"
-
+          
+          #clean up old containers if more than 1 exists
+          container_count=$(docker ps -a --filter "name=PROD" -q | wc -l)
+          
+          if [ "$container_count" -gt 1 ]; then
           old_containers=$(docker ps -a --filter "name=PROD" \
+          --format "{{.ID}} {{.CreatedAt}}" \
+          | sort -k2,2r \
+          | tail -n +4 \
+          | awk '{print $1}')
+
+            if [ ! -z "$old_containers" ]; then
+            docker rm -f $old_containers
+            fi
+          fi
+
+          # Clean up old images if more than 1 exists
+          image_count=$(docker images ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber --format "{{.ID}}" | wc -l)
+
+          # Only run cleanup if more than one image is found
+          if [ "$image_count" -gt 1 ]; then
+            old_images=$(docker images ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber \
             --format "{{.ID}} {{.CreatedAt}}" \
             | sort -k2,2r \
             | tail -n +4 \
             | awk '{print $1}')
-            
-          echo "Old containers that will be removed: $old_containers"
-
-          if [ ! -z "$old_containers" ]; then
-          docker rm -f $old_containers
-          fi
-          # Clean up old containers
-          old_containers=$(docker ps -a -q --filter "name=PROD" | tail -n +1)
-          if [ ! -z "$old_containers" ]; then
-            docker rm -f $old_containers
-          fi
-
-          # Clean up old images
-          old_images=$(docker images ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber --format "{{.ID}} {{.CreatedAt}}" | sort -r | tail -n +1 | awk '{print $1}')
+          
           if [ ! -z "$old_images" ]; then
             docker rmi -f $old_images
           fi
+         fi
           EOF
