--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,12 +1,36 @@
 {
+  "Paths": {
+    "HtmlFilesPath": "G:\\CIQ-WORK\\Work\\HT\\html",
+    "ResourceFilesPath": "G:\\CIQ-WORK\\Work\\HT",
+    "UrlPath": "https://parsonious.github.io/How-To/pages/"
+  },
+  "Files": {
+    "SupportedFileTypes": [ "html", "css", "js", "img", "sql", "ps1" ],
+    "DefaultFiles": {
+      "html": "default.html",
+      "css": "default.css",
+      "js": "default.js",
+      "img": "default.png",
+      "sql": "default.sql",
+      "ps1": "default.ps1",
+      "tsql": "default.tsql"
+    }
+  },
+  "XPathQueries": {
+    "//link[@rel='stylesheet' and @href]": "css",
+    "//script[@src]": "js",
+    "//img[@src]": "img",
+    "//a[@href][contains(@href, '.sql')]": "sql",
+    "//a[@href][contains(@href, '.ps1')]": "ps1"
+  },
   "Kestrel": {
-  "Endpoints": {
-    "Https": {
-      "Url": "https://localhost:5001",
-      "Certificate": {
-        "Path": "%USERPROFILE%\\.aspnet\\https\\localhost.pfx",
-        "Password": ""
-      }
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:5001",
+        "Certificate": {
+          "Path": "%USERPROFILE%\\.aspnet\\https\\localhost.pfx",
+          "Password": ""
+        }
       }
     }
   },
