--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Paths": {
-    "HtmlFilesPath": "a/p/api/source/html",
-    "ResourceFilesPath": "a/p/api/source/",
+    "HtmlFilesPath": "api/source/html",
+    "ResourceFilesPath": "api/source/",
     "UrlPath": "https://parsonious.github.io/How-To/pages/"
   },
   "Files": {
