revert to removal of fully qualifed resourcefilepath..
.net treats the readallbytesasync call like it is a local path which breaks when you pass https://domain/file/location

...so...
fuck.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Paths": {
-    "HtmlFilesPath": "https://bepio.net/api/source/html",
-    "ResourceFilesPath": "https://bepio.net/api/source/",
+    "HtmlFilesPath": "/api/source/html",
+    "ResourceFilesPath": "/api/source/",
     "UrlPath": "https://parsonious.github.io/How-To/pages/"
   },
   "Files": {
