--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,8 @@
   "Paths": {
     "HtmlFilesPath": "/api/source/html",
     "ResourceFilesPath": "/api/source/",
-    "UrlPath": "https://parsonious.github.io/How-To/pages/"
+    "FallBackUrlPath": "https://parsonious.github.io/How-To/pages/",
+    "ExternalUrlPath":  "https://bepio.net/"
   },
   "Files": {
     "SupportedFileTypes": [ "html", "css", "js", "img", "sql", "ps1" ],
