- update appsettings with new field for bepio.net - update field names - add new external path to PathsConfig

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,7 +2,8 @@
   "Paths": {
     "HtmlFilesPath": "G:\\CIQ-WORK\\Work\\HT\\html",
     "ResourceFilesPath": "G:\\CIQ-WORK\\Work\\HT",
-    "UrlPath": "https://parsonious.github.io/How-To/pages/"
+    "FallBackUrlPath": "https://parsonious.github.io/How-To/pages/",
+    "ExternalUrlPath": "https://bepio.net/"
   },
   "Files": {
     "SupportedFileTypes": [ "html", "css", "js", "img", "sql", "ps1" ],
