- Add DI for IPathHelper to NodeID and all calling Classes - Move Path Manipulation logic out of NodeID and into PathHelper - Test Logic for constructing ExternalURLPath all tests passed - Update Version - Addressed Issues #25 #23 in this commit

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,8 @@
   "Paths": {
     "HtmlFilesPath": "/api/source/html",
     "ResourceFilesPath": "/api/source/",
-    "FallBackUrlPath": "https://parsonious.github.io/How-To/pages/",
-    "ExternalUrlPath":  "https://bepio.net/"
+    "FallbackRemoteUrlPath": "https://parsonious.github.io/How-To/pages/",
+    "ExternalResourceUrlPath": "https://bepio.net/api/source/"
   },
   "Files": {
     "SupportedFileTypes": [ "html", "css", "js", "img", "sql", "ps1" ],
