--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,8 +2,8 @@
   "Paths": {
     "HtmlFilesPath": "G:\\CIQ-WORK\\Work\\HT\\html",
     "ResourceFilesPath": "G:\\CIQ-WORK\\Work\\HT",
-    "FallBackUrlPath": "https://parsonious.github.io/How-To/pages/",
-    "ExternalUrlPath": "https://bepio.net/"
+    "FallbackRemoteUrlPath": "https://parsonious.github.io/How-To/pages/",
+    "ExternalResourceUrlPath": "https://bepio.net/api/source/"
   },
   "Files": {
     "SupportedFileTypes": [ "html", "css", "js", "img", "sql", "ps1" ],
