started adding allowed hosts/domains to config for testing.
This is in relation to issue #26  and #15

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -17,28 +17,35 @@
       "tsql": "default.tsql"
     }
   },
-  "XPathQueries": {
-    "//link[@rel='stylesheet' and @href]": "css",
-    "//script[@src]": "js",
-    "//img[@src]": "img",
-    "//a[@href][contains(@href, '.sql')]": "sql",
-    "//a[@href][contains(@href, '.ps1')]": "ps1"
+  "AllowedHosts": {
+    "Domains": {
+      "localhost": "localhost",
+      "parsonious.github.io": "parsonious.github.io",
+      "bepio.net": "bepio.net"
+    }
   },
-  "Kestrel": {
-    "Endpoints": {
-      "Https": {
-        "Url": "https://localhost:5001",
-        "Certificate": {
-          "Path": "%USERPROFILE%\\.aspnet\\https\\localhost.pfx",
-          "Password": ""
+    "XPathQueries": {
+      "//link[@rel='stylesheet' and @href]": "css",
+      "//script[@src]": "js",
+      "//img[@src]": "img",
+      "//a[@href][contains(@href, '.sql')]": "sql",
+      "//a[@href][contains(@href, '.ps1')]": "ps1"
+    },
+    "Kestrel": {
+      "Endpoints": {
+        "Https": {
+          "Url": "https://localhost:5001",
+          "Certificate": {
+            "Path": "%USERPROFILE%\\.aspnet\\https\\localhost.pfx",
+            "Password": ""
+          }
         }
       }
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   }
-}
