update appsettings to match the class configurations update node to show proper script and style tags for embedded css and js while retaining displayed code blocks for sql and ps1 files.
TODO: Remove bak from configs and store elsewhere

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -38,23 +38,79 @@
     "ExpirationInMinutes": 10
   },
   "DomainClaims": {
-    "compiq.zendesk.com": {
-      "Claims": [
-        { "Type": "HTML", "Value": "PlainText" },
-        { "Type": "JS",   "Value": "PlainText" },
-        { "Type": "CSS",  "Value": "PlainText" },
-        { "Type": "SQL",  "Value": "PlainText" },
-        { "Type": "PS1",  "Value": "PlainText" }
-      ]
-    },
-    "dev.bepio.net": {
-      "Claims": [
-        { "Type": "HTML", "Value": "PlainText" },
-        { "Type": "JS",   "Value": "PlainText" },
-        { "Type": "CSS",  "Value": "PlainText" },
-        { "Type": "SQL",  "Value": "PlainText" },
-        { "Type": "PS1",  "Value": "PlainText" }
-      ]
+    "Settings": {
+      "compiq.zendesk.com": {
+        "Claims": [
+          {
+            "Type": "HTML",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "JS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "CSS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "SQL",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "PS1",
+            "Value": "PlainText"
+          }
+        ]
+      },
+      "dev.bepio.net": {
+        "Claims": [
+          {
+            "Type": "HTML",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "JS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "CSS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "SQL",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "PS1",
+            "Value": "PlainText"
+          }
+        ]
+      },
+      "localhost": {
+        "Claims": [
+          {
+            "Type": "HTML",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "JS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "CSS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "SQL",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "PS1",
+            "Value": "PlainText"
+          }
+        ]
+      }
     }
   },
   "Kestrel": {
