--- a/appsettings.json
+++ b/appsettings.json
@@ -38,53 +38,55 @@
     "ExpirationInMinutes": 10
   },
   "DomainClaims": {
-    "compiq.zendesk.com": {
-      "Claims": [
-        {
-          "Type": "HTML",
-          "Value": "PlainText"
-        },
-        {
-          "Type": "JS",
-          "Value": "PlainText"
-        },
-        {
-          "Type": "CSS",
-          "Value": "PlainText"
-        },
-        {
-          "Type": "SQL",
-          "Value": "PlainText"
-        },
-        {
-          "Type": "PS1",
-          "Value": "PlainText"
-        }
-      ]
-    },
-    "dev.bepio.net": {
-      "Claims": [
-        {
-          "Type": "HTML",
-          "Value": "PlainText"
-        },
-        {
-          "Type": "JS",
-          "Value": "PlainText"
-        },
-        {
-          "Type": "CSS",
-          "Value": "PlainText"
-        },
-        {
-          "Type": "SQL",
-          "Value": "PlainText"
-        },
-        {
-          "Type": "PS1",
-          "Value": "PlainText"
-        }
-      ]
+    "Settings": {
+      "compiq.zendesk.com": {
+        "Claims": [
+          {
+            "Type": "HTML",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "JS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "CSS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "SQL",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "PS1",
+            "Value": "PlainText"
+          }
+        ]
+      },
+      "dev.bepio.net": {
+        "Claims": [
+          {
+            "Type": "HTML",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "JS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "CSS",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "SQL",
+            "Value": "PlainText"
+          },
+          {
+            "Type": "PS1",
+            "Value": "PlainText"
+          }
+        ]
+      }
     }
   },
   "Kestrel": {
