more key binding stuff

--- a/appsettings.json
+++ b/appsettings.json
@@ -37,6 +37,14 @@
     "ApiKey": "",
     "ExpirationInMinutes": 10
   },
+  "KeyManagement":{
+    "KeyFolder": "/app/keys", 
+    "RotationIntervalDays": 30,
+    "KeyLifetimeDays": 90,
+    "RetentionPeriodDays": 180,
+    "MinimumKeyAge": 2,
+    "WarningThresholdDays": 7
+  },
   "DomainClaims": {
     "Settings": {
       "compiq.zendesk.com": {
