--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -72,9 +72,13 @@ jobs:
           # Run the new container on port 8081
           if ! output=$(docker run -d -p 8081:80 -p 8444:443 \
           --name $container_name \
-          -v /home/parsonious/bepio/api/source:/api/static-files \
+          --env KeyManagement__KeyFolder=/app/keys \
+          --env KeyManagement__Environment=Development \
+          -v /var/www/bepio/api/source:/api/source \
           -v /etc/letsencrypt/live/bepio.net/fullchain.pem:/etc/letsencrypt/live/bepio.net/fullchain.pem:ro \
           -v /etc/letsencrypt/live/bepio.net/privkey.pem:/etc/letsencrypt/live/bepio.net/privkey.pem:ro \
+          -v /var/www/bepio/api/dev/keys:/app/Keys:ro \
+          -v /var/www/bepio/api/dev/logs:/app/Logs \
           ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.IMAGE_TAG }} 2>&1); then
             echo "Docker run command failed with the following error:"
             echo "$output"
