ECDSA test completion. All Tests passed

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -17,12 +17,9 @@
       "tsql": "default.tsql"
     }
   },
-  "AllowedHosts": {
-    "Domains": {
-      "localhost": "localhost",
-      "parsonious.github.io": "parsonious.github.io",
-      "bepio.net": "bepio.net"
-    }
+  "Referer": {
+    "AllowedDomains": [ "localhost", "dev.bepio.net", "compiq.zendesk.com", "bepio.net" ],
+    "EnforceHttps": true
   },
   "XPathQueries": {
     "//link[@rel='stylesheet' and @href]": "css",
@@ -38,7 +35,7 @@
     "ExpirationInMinutes": 10
   },
   "KeyManagement": {
-    "KeyFolder": "G:\\CIQ-WORK\\Work\\Tests\\API\\Keys",
+    "KeyFolder": "G:\\CIQ-WORK\\Work\\Tests\\API\\Keys\\active",
     "RotationIntervalDays": 30,
     "KeyLifetimeDays": 90,
     "RetentionPeriodDays": 180,
