key rotation fix

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -35,11 +35,12 @@
     "ExpirationInMinutes": 10
   },
   "KeyManagement": {
-    "KeyFolder": "G:\\CIQ-WORK\\Work\\Tests\\API\\Keys\\active",
-    "RotationIntervalDays": 30,
-    "KeyLifetimeDays": 90,
+    "KeyActiveFolder": "G:\\CIQ-WORK\\Work\\Tests\\API\\Keys\\active",
+    "KeyArchiveFolder": "G:\\CIQ-WORK\\Work\\Tests\\API\\Keys\\archive",
+    "RotationIntervalDays": 1, //super short for testing was 30
+    "KeyLifetimeDays": 2, //super short for testing was 90
     "RetentionPeriodDays": 180,
-    "MinimumKeyAge": 2,
+    "MinimumKeyAge": 1, //super short was 2
     "WarningThresholdDays": 7
   },
   "DomainClaims": {
