--- a/appsettings.json
+++ b/appsettings.json
@@ -17,12 +17,9 @@
       "tsql": "default.tsql"
     }
   },
-  "AllowedHosts": {
-    "Domains": {
-      "localhost": "localhost",
-      "parsonious.github.io": "parsonious.github.io",
-      "bepio.net": "bepio.net"
-    }
+  "Referer": {
+    "AllowedDomains": [ "localhost", "dev.bepio.net", "compiq.zendesk.com", "bepio.net" ],
+    "EnforceHttps": true
   },
   "XPathQueries": {
     "//link[@rel='stylesheet' and @href]": "css",
@@ -37,8 +34,9 @@
     "ApiKey": "",
     "ExpirationInMinutes": 10
   },
-  "KeyManagement":{
-    "KeyFolder": "/app/keys", 
+  "KeyManagement": {
+    "KeyActiveFolder": "/app/keys",
+    "KeyArchiveFolder": "/app/keys",
     "RotationIntervalDays": 30,
     "KeyLifetimeDays": 90,
     "RetentionPeriodDays": 180,
