update deploy-dev remove todo from configoptions clean up appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -18,7 +18,7 @@
     }
   },
   "Referer": {
-    "AllowedDomains": [ "localhost", "dev.bepio.net", "compiq.zendesk.com", "bepio.net" ],
+    "AllowedDomains": [ "dev.bepio.net", "compiq.zendesk.com", "bepio.net" ],
     "EnforceHttps": true
   },
   "XPathQueries": {
@@ -35,8 +35,8 @@
     "ExpirationInMinutes": 10
   },
   "KeyManagement": {
-    "KeyActiveFolder": "/app/keys",
-    "KeyArchiveFolder": "/app/keys",
+    "KeyActiveFolder": "/app/keys/active",
+    "KeyArchiveFolder": "/app/keys/archive",
     "RotationIntervalDays": 30,
     "KeyLifetimeDays": 90,
     "RetentionPeriodDays": 180,
