--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -77,8 +77,8 @@ jobs:
           -v /var/www/bepio/api/source:/api/source \
           -v /etc/letsencrypt/live/bepio.net/fullchain.pem:/etc/letsencrypt/live/bepio.net/fullchain.pem:ro \
           -v /etc/letsencrypt/live/bepio.net/privkey.pem:/etc/letsencrypt/live/bepio.net/privkey.pem:ro \
-          -v /var/www/bepio/api/dev/keys:/app/Keys:ro \
-          -v /var/www/bepio/api/dev/logs:/app/Logs \
+          -v /var/www/bepio/api/dev/keys:/app/keys \
+          -v /var/www/bepio/api/dev/logs:/app/logs \
           ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.IMAGE_TAG }} 2>&1); then
             echo "Docker run command failed with the following error:"
             echo "$output"
