update deploy ymls and allow for user secrets for local dev and env variabls for dev and prod

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -29,18 +29,18 @@
     "//a[@href][contains(@href, '.ps1')]": "ps1"
   },
   "Jwt": {
-    "TokenKey": "",
+    "TokenKey": "${JWT_TOKEN_KEY}",
     "Issuer": "false",
-    "ApiKey": "",
+    "ApiKey": "${JWT_API_KEY}",
     "ExpirationInMinutes": 10
   },
   "KeyManagement": {
     "KeyActiveFolder": "G:\\CIQ-WORK\\Work\\Tests\\API\\Keys\\active",
     "KeyArchiveFolder": "G:\\CIQ-WORK\\Work\\Tests\\API\\Keys\\archive",
-    "RotationIntervalDays": 1, //super short for testing was 30
-    "KeyLifetimeDays": 2, //super short for testing was 90
+    "RotationIntervalDays": 1, 
+    "KeyLifetimeDays": 2, 
     "RetentionPeriodDays": 180,
-    "MinimumKeyAge": 1, //super short was 2
+    "MinimumKeyAge": 1, 
     "WarningThresholdDays": 7
   },
   "DomainClaims": {
