--- a/appsettings.json
+++ b/appsettings.json
@@ -29,9 +29,9 @@
     "//a[@href][contains(@href, '.ps1')]": "ps1"
   },
   "Jwt": {
-    "TokenKey": "",
+    "TokenKey": "${JWT_TOKEN_KEY}",
     "Issuer": "https://bepio.net",
-    "ApiKey": "",
+    "ApiKey": "${JWT_API_KEY}",
     "ExpirationInMinutes": 10
   },
   "KeyManagement": {
