--- a/.github/workflows/deploy-Prod.yml
+++ b/.github/workflows/deploy-Prod.yml
@@ -68,6 +68,8 @@ jobs:
           --name $container_name \
           --env KeyManagement__KeyFolder=/api/keys \
           --env KeyManagement__Environment=Production \
+          --env Jwt__ApiKey="${{ secrets.JWT_API_KEY_PROD }}" \
+          --env Jwt__Issuer="https://bepio.net" \
           -v /var/www/bepio/api/source:/api/source \
           -v /etc/letsencrypt/live/bepio.net/fullchain.pem:/etc/letsencrypt/live/bepio.net/fullchain.pem:ro \
           -v /etc/letsencrypt/live/bepio.net/privkey.pem:/etc/letsencrypt/live/bepio.net/privkey.pem:ro \
