- fix local launch bug - add required flag to environment specific appsettings file - update version.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -122,9 +122,9 @@
   "Kestrel": {
     "Endpoints": {
       "Https": {
-        "Url": "https://localhost:5001",
+        "Url": "https://localhost:7223",
         "Certificate": {
-          "Path": "%USERPROFILE%\\.aspnet\\https\\localhost.pfx",
+          "Path": "C:\\Users\\parso\\.aspnet\\https\\localhost.pfx",
           "Password": ""
         }
       }
