--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -72,15 +72,9 @@ jobs:
           # Run the new container on port 8081
           if ! output=$(docker run -d -p 8081:80 -p 8444:443 \
           --name $container_name \
-          --env KeyManagement__KeyFolder=/app/keys \
-          --env KeyManagement__Environment=Development \
-          --env Jwt__ApiKey="${{ secrets.JWT_API_KEY_DEV }}" \
-          --env Jwt__Issuer="https://dev.bepio.net" \
-          -v /var/www/bepio/api/source:/api/source \
+          -v /home/parsonious/bepio/api/source:/api/static-files \
           -v /etc/letsencrypt/live/bepio.net/fullchain.pem:/etc/letsencrypt/live/bepio.net/fullchain.pem:ro \
           -v /etc/letsencrypt/live/bepio.net/privkey.pem:/etc/letsencrypt/live/bepio.net/privkey.pem:ro \
-          -v /var/www/bepio/api/dev/keys:/app/keys \
-          -v /var/www/bepio/api/dev/logs:/app/logs \
           ${{ secrets.DOCKER_USERNAME }}/zd-article-grabber:${{ env.IMAGE_TAG }} 2>&1); then
             echo "Docker run command failed with the following error:"
             echo "$output"
