--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -17,123 +17,35 @@
       "tsql": "default.tsql"
     }
   },
-  "Referer": {
-    "AllowedDomains": [ "localhost", "dev.bepio.net", "compiq.zendesk.com", "bepio.net" ],
-    "EnforceHttps": true
-  },
-  "XPathQueries": {
-    "//link[@rel='stylesheet' and @href]": "css",
-    "//script[@src]": "js",
-    "//img[@src]": "img",
-    "//a[@href][contains(@href, '.sql')]": "sql",
-    "//a[@href][contains(@href, '.ps1')]": "ps1"
-  },
-  "Jwt": {
-    "TokenKey": "${JWT_TOKEN_KEY}",
-    "Issuer": "false",
-    "ApiKey": "${JWT_API_KEY}",
-    "ExpirationInMinutes": 10
-  },
-  "KeyManagement": {
-    "KeyActiveFolder": "G:\\CIQ-WORK\\Work\\Tests\\API\\Keys\\active",
-    "KeyArchiveFolder": "G:\\CIQ-WORK\\Work\\Tests\\API\\Keys\\archive",
-    "RotationIntervalDays": 1, 
-    "KeyLifetimeDays": 2, 
-    "RetentionPeriodDays": 180,
-    "MinimumKeyAge": 1, 
-    "WarningThresholdDays": 7
-  },
-  "DomainClaims": {
-    "Settings": {
-      "compiq.zendesk.com": {
-        "Claims": [
-          {
-            "Type": "HTML",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "JS",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "CSS",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "SQL",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "PS1",
-            "Value": "PlainText"
-          }
-        ]
-      },
-      "dev.bepio.net": {
-        "Claims": [
-          {
-            "Type": "HTML",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "JS",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "CSS",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "SQL",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "PS1",
-            "Value": "PlainText"
-          }
-        ]
-      },
-      "localhost": {
-        "Claims": [
-          {
-            "Type": "HTML",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "JS",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "CSS",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "SQL",
-            "Value": "PlainText"
-          },
-          {
-            "Type": "PS1",
-            "Value": "PlainText"
-          }
-        ]
-      }
+  "AllowedHosts": {
+    "Domains": {
+      "localhost": "localhost",
+      "parsonious.github.io": "parsonious.github.io",
+      "bepio.net": "bepio.net"
     }
   },
-  "Kestrel": {
-    "Endpoints": {
-      "Https": {
-        "Url": "https://localhost:5001",
-        "Certificate": {
-          "Path": "%USERPROFILE%\\.aspnet\\https\\localhost.pfx",
-          "Password": ""
+    "XPathQueries": {
+      "//link[@rel='stylesheet' and @href]": "css",
+      "//script[@src]": "js",
+      "//img[@src]": "img",
+      "//a[@href][contains(@href, '.sql')]": "sql",
+      "//a[@href][contains(@href, '.ps1')]": "ps1"
+    },
+    "Kestrel": {
+      "Endpoints": {
+        "Https": {
+          "Url": "https://localhost:5001",
+          "Certificate": {
+            "Path": "%USERPROFILE%\\.aspnet\\https\\localhost.pfx",
+            "Password": ""
+          }
         }
       }
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   }
-}
