app to api plus version.

--- a/appsettings.json
+++ b/appsettings.json
@@ -35,8 +35,8 @@
     "ExpirationInMinutes": 10
   },
   "KeyManagement": {
-    "KeyActiveFolder": "/app/keys/active",
-    "KeyArchiveFolder": "/app/keys/archive",
+    "KeyActiveFolder": "/api/keys/active",
+    "KeyArchiveFolder": "/api/keys/archive",
     "RotationIntervalDays": 30,
     "KeyLifetimeDays": 90,
     "RetentionPeriodDays": 180,
