--- a/appsettings.json
+++ b/appsettings.json
@@ -18,7 +18,7 @@
     }
   },
   "Referer": {
-    "AllowedDomains": [ "dev.bepio.net", "compiq.zendesk.com", "bepio.net" ],
+    "AllowedDomains": [ "dev.bepio.net", "compiqsolutions.zendesk.com", "bepio.net" ],
     "EnforceHttps": true
   },
   "XPathQueries": {
