--- a/appsettings.json
+++ b/appsettings.json
@@ -45,7 +45,7 @@
   },
   "DomainClaims": {
     "Settings": {
-      "compiq.zendesk.com": {
+      "compiqsolutions.zendesk.com": {
         "Claims": [
           {
             "Type": "HTML",
